# a1_sim_py

./: .gitignore  README.md  log.txt
a1/: package.xml
a1_controller/scripts/: robot_controller_gazebo.py
a1_description/: CMakeLists.txt
a1_description/launch/: a1_rviz.launch
a1_description/urdf/: a1.urdf
a1_gazebo/launch/: go1_gazebo.rviz  simulation.launch  simulation_go1.launch
a1_joystick/: CMakeLists.txt  package.xml
a1_joystick/launch/: ramped_joystick.launch
a1_joystick/scripts/: ramped_joystick.py
controllers/a1_controller/: package.xml
controllers/go1_controller/: CMakeLists.txt  package.xml
descriptions/a1_description/: package.xml
descriptions/a1_description/rviz/: check_joint.rviz
descriptions/a1_description/xacro/: robot.xacro
gazebos/a1_gazebo/: package.xml
gazebos/go1_gazebo/: CMakeLists.txt  package.xml
gazebos/go1_gazebo/config/: controllers.yaml  go1_controllers.yaml
gazebos/go1_gazebo/launch/: simulation.launch
gazebos/go1_gazebo/rviz/: go1_gazebo.rviz
go1_controller/: package.xml
go1_controller/scripts/: robot_controller_gazebo.py
go1_gazebo/launch/: simulation.launch  simulation_go1.launch
quadruped_unitree/: CMakeLists.txt  package.xml
quadruped_unitree/config/: joystick.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
quadruped_unitree/launch/: a1_gazebo.launch  custom_twist_mux.launch  go1_gazebo.launch
quadruped_unitree/scripts/: base_link_pose.py  joystick_relay.py  respawn_robot.py
resources/: a1
src/a1/: CMakeLists.txt
src/a1_controller/: CMakeLists.txt
src/a1_gazebo/: CMakeLists.txt
(+50 files in other folders)
