<?xml version="1.0"?>
<package format="2">
  <name>go1_gazebo</name>
  <version>1.0.0</version>
  <description>The go1_gazebo package</description>

  <!-- This package is forked from lnotspotl "lnotspotl@gmail.com" -->
  <maintainer email="tge1375@naver.com">kimsooyoung</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
